--- a/public/index.html
+++ b/public/index.html
@@ -46,72 +46,13 @@
     <div class="RYPP-playlist">
       <header>
         <h2 class="_h1">Playlist title</h2>
-        <p>Playlist subtitleSubtitulo o un <a href="#" target="_blank">#hashtag</a></p>
+        <p>Playlist subtitle<a href="#" target="_blank">#hashtag</a></p>
       </header>
       <div class="RYPP-items"></div>
     </div>
   </div>
 
 </div><!-- wrapper -->
-
-
-
-<!-- <div class="RYPP" data-ratio="16:9">
-  <div class="RYPP-video">
-    <img class="RYPP-placeholder" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAA7KqwyAAAAD0lEQVQoU2NgGAWjgAoAAAJJAAHDmDdKAAAAAElFTkSuQmCC">
-    <iframe src="//www.youtube.com/embed/uZ0a29fA4-E" frameborder="0" allowfullscreen></iframe>
-  </div>
-  <div class="RYPP-playlist">
-    <header>
-      <h2 class="_h1">Título del listado</h2>
-      <p>Subtitulo o un <a href="#" target="_blank">#hashtag</a></p>
-    </header>
-    <div class="RYPP-items">
-      <ol>
-        <li class="selected" data-video-id="JnsfjtXu1KQ">
-          <p>
-            Meliá Barcelona Sky, un hotel responsable con el medio ambiente<small><br>de Universidad Americana</small>
-          </p>
-
-          <img src="http://dummyimage.com/74x44.jpg">
-        </li>
-        <li data-video-id="tuNyVPlJsPA">
-          <p>
-            Hoteles eficientes - entrevista a Álvaro Carrillo, director del Instituto Tecnológico
-          </p>
-          <img src="http://dummyimage.com/74x44.jpg">
-        </li>
-        <li data-video-id="gC7rMxEcMXs">
-          <p>
-            Hotel Eco-amigable en Costa Rica
-          </p>
-          <img src="http://dummyimage.com/74x44.jpg">
-        </li>
-         <li data-video-id="hlaUCwQRlPo">
-          <p>
-            High Line Park. Nueva York
-          </p>
-          <img src="http://dummyimage.com/74x44.jpg">
-        </li>
-        <li data-video-id="ERObpckhgAs">
-          <p>
-            La ciudad ecológica de Tianjin, vanguardia de la sostenibilidad en China
-          </p>
-          <img src="http://dummyimage.com/74x50.jpg">
-        </li>
-        <li data-video-id="ERObpckhgAs">
-          <p>
-            La ciudad ecológica de Tianjin, vanguardia de la sostenibilidad en China
-          </p>
-          <img src="http://dummyimage.com/74x50.jpg">
-        </li>
-      </ol>
-    </div>
-  </div>
-</div> -->
-
-
-
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script src="js/RYPP.js"></script>
