Queda por resolver el tema de ajax con promises

--- a/public/demo-id-list.html
+++ b/public/demo-id-list.html
@@ -37,7 +37,7 @@
 
 <div class="wrapper">
 
-  <div class="RYPP" data-ratio="4:3" data-ids="Vd_uXb4XPZg,uZ0a29fA4-E,lyXt1K9goAo" data-playlist="PL2591DC20C4BB4D78">
+  <div class="RYPP" data-ratio="4:3" data-ids="GeeFjmposyc,VNzxsOB2Q3g,q5XJhzPwxmg">
     <div id="RYPP-video">
       <div id="RYPP-video-player">
         <!-- Will be replaced -->
