--- a/demo-id-list.html
+++ b/demo-id-list.html
@@ -63,7 +63,11 @@
   $(document).ready(function() {
     // la magia aquí
 
+    // This key only works for this demo on GitHub
+    // You must create your own at:
+    // https://developers.google.com/youtube/v3/getting-started
     RYPP.api_key = 'AIzaSyA1rpTMrNjth1R6-LfLe0UG8v1946nj3Xw';
+
     $('.RYPP').rypp({
       // autoplay: true, // Default
       // autonext: true, // Default
