--- a/demo-playlist.html
+++ b/demo-playlist.html
@@ -66,9 +66,13 @@
     // This key only works for this demo on GitHub
     // You must create your own at:
     // https://developers.google.com/youtube/v3/getting-started
-    RYPP.api_key = 'AIzaSyA1rpTMrNjth1R6-LfLe0UG8v1946nj3Xw';
+    var api_key = 'AIzaSyA1rpTMrNjth1R6-LfLe0UG8v1946nj3Xw';
 
-    $('.RYPP').rypp();
+
+    $('.RYPP').rypp(
+      'AIzaSyA1rpTMrNjth1R6-LfLe0UG8v1946nj3Xw',{
+
+    });
 
   });
 </script>
