Now deleted or rejected videos are not included in the playlist

--- a/demo.html
+++ b/demo.html
@@ -114,7 +114,8 @@
     // $('.RYPP').rypp('AIzaSyA1rpTMrNjth1R6-LfLe0UG8v1946nj3Xw');
 
     // Start two players by ID, with default settings
-    $('#rypp-demo-1, #rypp-demo-2').rypp( api_key );
+    $('#rypp-demo-1').rypp( api_key );
+    $('#rypp-demo-2').rypp( api_key );
 
     // Start two players by ID, with default settings
     $('#rypp-demo-3').rypp( api_key ,{
