--- a/demo.html
+++ b/demo.html
@@ -124,6 +124,7 @@
     $('#rypp-demo-3').rypp( api_key ,{
       update_title_desc: true, // Default false
       autoplay: false,
+      autonext: false,
       loop: false,
       mute: true
     });
