--- a/demo.html
+++ b/demo.html
@@ -41,6 +41,25 @@
 
 <div class="wrapper">
 
+  <p>Sample playlist with 100 vídeos. Aspect ratio 16:9 (see README.md)</p>
+
+  <div id="rypp-demo-4" class="RYPP r16-9" data-playlist="PLg5ScSqSDXssRwFxw2FihfGfGg2A_ky96">
+    <div class="RYPP-video">
+      <div class="RYPP-video-player">
+        <!-- Will be replaced -->
+      </div>
+    </div>
+    <div class="RYPP-playlist">
+      <header>
+        <h2 class="_h1 RYPP-title">Playlist title</h2>
+        <p class="RYPP-desc">Playlist subtitle <a href="#" target="_blank">#hashtag</a></p>
+      </header>
+      <div class="RYPP-items"></div>
+    </div>
+  </div>
+
+  <br><br>
+
   <p>Sample playlist player with default options. Aspect ratio 16:9 (see README.md)</p>
 
   <div id="rypp-demo-1" class="RYPP r16-9" data-playlist="PL2591DC20C4BB4D78">
@@ -116,18 +135,21 @@
     // $('.RYPP').rypp('AIzaSyA1rpTMrNjth1R6-LfLe0UG8v1946nj3Xw');
 
     // Start two players by ID, with default settings
-    $('#rypp-demo-1').rypp( api_key );
+    // $('#rypp-demo-1').rypp( api_key );
 
-    $('#rypp-demo-2').rypp( api_key );
+    // $('#rypp-demo-2').rypp( api_key );
 
     // Start two players by ID, with default settings
-    $('#rypp-demo-3').rypp( api_key ,{
-      update_title_desc: true, // Default false
-      autoplay: false,
-      autonext: false,
-      loop: false,
-      mute: true
-    });
+    // $('#rypp-demo-3').rypp( api_key ,{
+    //   update_title_desc: true, // Default false
+    //   autoplay: false,
+    //   autonext: false,
+    //   loop: false,
+    //   mute: true
+    // });
+
+    // 100 videos in playlist
+    $('#rypp-demo-4').rypp( api_key );
 
   });
 </script>
