Seems is working now most of the times

--- a/demo.html
+++ b/demo.html
@@ -43,9 +43,6 @@
 
 <div class="wrapper">
 
-<div id="TESTEST">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia, enim!</div>
-
-
   <p>Sample playlist with 100 vídeos. Aspect ratio 16:9 (see README.md)</p>
 
   <div id="rypp-demo-4" class="RYPP r16-9" data-playlist="PLg5ScSqSDXssRwFxw2FihfGfGg2A_ky96">
@@ -140,9 +137,9 @@
     // $('.RYPP').rypp('AIzaSyA1rpTMrNjth1R6-LfLe0UG8v1946nj3Xw');
 
     // Start two players by ID, with default settings
-    // $('#rypp-demo-1').rypp( api_key );
+    // $('#rypp-demo-1').rypp( window.api_key );
 
-    // $('#rypp-demo-2').rypp( api_key );
+    // $('#rypp-demo-2').rypp( window.api_key );
 
     // Start two players by ID, with default settings
     // $('#rypp-demo-3').rypp( api_key ,{
@@ -154,7 +151,7 @@
     // });
 
     // 100 videos in playlist
-    // $('#rypp-demo-4').rypp( api_key );
+    // $('#rypp-demo-4').rypp( window.api_key );
 
   });
 </script>
